DevOps/force-app/main/default/objects/Survey__c/fields/Confidence_making_safe_decisions__c.field-meta.xml
<CustomField>
    <fullName>Confidence_making_safe_decisions__c</fullName>
    <description>Field used for The Bridge | Pre/Post Participant Survey</description>
    <inlineHelpText>How confident are you in your ability to make safe decisions in a risky situation?</inlineHelpText>
    <label>Confidence making safe decisions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1to5</valueSetName>
    </valueSet>
</CustomField>