DevOps/force-app/main/default/objects/Survey__c/fields/Confident_naming_5_safety_tips__c.field-meta.xml
<CustomField>
    <fullName>Confident_naming_5_safety_tips__c</fullName>
    <description>Field used for The Bridge | Pre/Post Participant Survey</description>
    <inlineHelpText>How confident are you about telling someone 5 ways to stay safe while drinking/taking drugs?</inlineHelpText>
    <label>Confident naming 5 safety tips</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1to5</valueSetName>
    </valueSet>
</CustomField>