DevOps/force-app/main/default/objects/Survey__c/fields/Increased_AOD_risk_awareness__c.field-meta.xml
<CustomField>
    <fullName>Increased_AOD_risk_awareness__c</fullName>
    <inlineHelpText>Has this activity led to an increase in awareness of how to manage the risks and harms associated with AOD use?</inlineHelpText>
    <label>Increased AOD risk awareness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1to5</valueSetName>
    </valueSet>
</CustomField>