DevOps/force-app/main/default/objects/Survey__c/fields/Know_what_to_do_if_friend_is_sick__c.field-meta.xml
<CustomField>
    <fullName>Know_what_to_do_if_friend_is_sick__c</fullName>
    <description>Field used for The Bridge | Pre/Post Participant Survey</description>
    <inlineHelpText>How confident are you in knowing what to do when your friend gets sick from drugs or passes out?</inlineHelpText>
    <label>Know what to do if friend is sick</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1to5</valueSetName>
    </valueSet>
</CustomField>