DevOps/force-app/main/default/objects/Survey__c/fields/Know_where_to_get_help_AOD_use__c.field-meta.xml
<CustomField>
    <fullName>Know_where_to_get_help_AOD_use__c</fullName>
    <description>Field used for The Bridge | Pre/Post Participant Survey</description>
    <inlineHelpText>How confident are you in knowing where to get help for you or a friend who is struggling with use of alcohol or drugs?</inlineHelpText>
    <label>Know where to get help (AOD use)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1to5</valueSetName>
    </valueSet>
</CustomField>