DevOps/force-app/main/default/objects/Survey__c/fields/Knowledge_of_Drugs_and_Alcohol__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_of_Drugs_and_Alcohol__c</fullName>
    <inlineHelpText>How confident are you in your knowledge of drugs and alcohol?</inlineHelpText>
    <label>Knowledge of Drugs and Alcohol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1to5</valueSetName>
    </valueSet>
</CustomField>