DevOps/force-app/main/default/objects/Survey__c/fields/Student_feedback_was_positive__c.field-meta.xml
<CustomField>
    <fullName>Student_feedback_was_positive__c</fullName>
    <inlineHelpText>Was the overall feedback from the students about the program positive?</inlineHelpText>
    <label>Student feedback was positive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1to5</valueSetName>
    </valueSet>
</CustomField>