DevOps/force-app/main/default/objects/Survey__c/fields/Students_changed_AOD_behaviour__c.field-meta.xml
<CustomField>
    <fullName>Students_changed_AOD_behaviour__c</fullName>
    <inlineHelpText>Do you believe any of the students have changed their AOD behaviour as a result of the program?</inlineHelpText>
    <label>Students changed AOD behaviour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1to5</valueSetName>
    </valueSet>
</CustomField>