DevOps/force-app/main/default/objects/Survey__c/fields/Students_engaged_well_in_sessions__c.field-meta.xml
<CustomField>
    <fullName>Students_engaged_well_in_sessions__c</fullName>
    <inlineHelpText>Do you think the students engaged well in the sessions?</inlineHelpText>
    <label>Students engaged well in sessions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1to5</valueSetName>
    </valueSet>
</CustomField>