DevOps/force-app/main/default/objects/Survey__c/fields/Students_retained_the_info_well__c.field-meta.xml
<CustomField>
    <fullName>Students_retained_the_info_well__c</fullName>
    <inlineHelpText>How well do you think the students retained the information delivered?</inlineHelpText>
    <label>Students retained the info well</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1to5</valueSetName>
    </valueSet>
</CustomField>