DevOps/force-app/main/default/objects/Survey__c/recordTypes/Cultural_Survey.recordType-meta.xml
<RecordType>
    <fullName>Cultural_Survey</fullName>
    <active>true</active>
    <description>Cultural</description>
    <label>Cultural Survey</label>
</RecordType>