DevOps/force-app/main/default/objects/Survey__c/recordTypes/Family_Connect_and_Support_Client_Survey_and_Guide.recordType-meta.xml
<RecordType>
    <fullName>Family_Connect_and_Support_Client_Survey_and_Guide</fullName>
    <active>true</active>
    <label>Family Connect and Support Client Survey and Guide</label>
</RecordType>