DevOps/force-app/main/default/objects/Survey__c/recordTypes/Family_Connect_in_Schools.recordType-meta.xml
<RecordType>
    <fullName>Family_Connect_in_Schools</fullName>
    <active>true</active>
    <label>Family Connect in Schools</label>
</RecordType>