DevOps/force-app/main/default/objects/Survey__c/recordTypes/Family_Connect_in_Schools_QC.recordType-meta.xml
<RecordType>
    <fullName>Family_Connect_in_Schools_QC</fullName>
    <active>true</active>
    <label>Family Connect in Schools - Q&amp;C</label>
</RecordType>