DevOps/force-app/main/default/objects/Survey__c/recordTypes/Group_Case_Survey.recordType-meta.xml
<RecordType>
    <fullName>Group_Case_Survey</fullName>
    <active>true</active>
    <label>Group Case Survey</label>
</RecordType>