DevOps/force-app/main/default/objects/Survey__c/recordTypes/Opportunity_Pathways_Client_Satisfaction_Survey.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Pathways_Client_Satisfaction_Survey</fullName>
    <active>true</active>
    <description>Opportunity Pathways Client Satisfaction Survey</description>
    <label>Opportunity Pathways Client Satisfaction Survey</label>
</RecordType>