DevOps/force-app/main/default/objects/Survey__c/recordTypes/ParticipantSurvey.recordType-meta.xml
<RecordType>
    <fullName>ParticipantSurvey</fullName>
    <active>true</active>
    <label>Participant Survey</label>
</RecordType>