DevOps/force-app/main/default/objects/Survey__c/recordTypes/Social_Futures_Experience_Score.recordType-meta.xml
<RecordType>
    <fullName>Social_Futures_Experience_Score</fullName>
    <active>true</active>
    <description>Social Futures Experience Score</description>
    <label>Social Futures Experience Score</label>
</RecordType>