DevOps/force-app/main/default/objects/Survey__c/recordTypes/The_Bridge_Group_Participant_Survey.recordType-meta.xml
<RecordType>
    <fullName>The_Bridge_Group_Participant_Survey</fullName>
    <active>true</active>
    <label>The Bridge | Group Participant Survey</label>
</RecordType>