DevOps/force-app/main/default/objects/Survey__c/recordTypes/The_Bridge_Group_Teacher_Survey.recordType-meta.xml
<RecordType>
    <fullName>The_Bridge_Group_Teacher_Survey</fullName>
    <active>true</active>
    <label>The Bridge | Group Teacher Survey</label>
</RecordType>