DevOps/force-app/main/default/objects/Survey__c/recordTypes/Workshop_CSAT.recordType-meta.xml
<RecordType>
    <fullName>Workshop_CSAT</fullName>
    <active>true</active>
    <label>Workshop CSAT</label>
</RecordType>