DevOps/force-app/main/default/objects/Survey__c/recordTypes/Youth_on_Track_Questionnaire.recordType-meta.xml
<RecordType>
    <fullName>Youth_on_Track_Questionnaire</fullName>
    <active>true</active>
    <label>Youth on Track Questionnaire</label>
</RecordType>